fixed spacing of subtitle in mobile mode

--- a/client/src/pages/Maintenance/Maintenance.scss
+++ b/client/src/pages/Maintenance/Maintenance.scss
@@ -80,5 +80,6 @@
 
   @include devices(mobile) {
     font-size: 12px;
+    width: 70%;
   }
 }
